--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@ mono_crash.*
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
 [Bb]in/
 [Oo]bj/
 [Oo]ut/
